[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/sled.png" type="Texture" id=1]
[ext_resource path="res://assets/bg_layers/far_trees.png" type="Texture" id=2]
[ext_resource path="res://assets/bg_layers/snow.png" type="Texture" id=3]
[ext_resource path="res://scenes/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://assets/bg_layers/stars.png" type="Texture" id=5]
[ext_resource path="res://assets/bg_layers/aurora.png" type="Texture" id=6]
[ext_resource path="res://assets/bg_layers/clouds.png" type="Texture" id=7]
[ext_resource path="res://assets/bg_layers/mountains.png" type="Texture" id=8]
[ext_resource path="res://assets/bg_layers/near_trees.png" type="Texture" id=9]
[ext_resource path="res://shaders/aurora.gdshader" type="Shader" id=10]
[ext_resource path="res://scenes/GraphicScene.gd" type="Script" id=11]

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 10 )
shader_param/evil = true

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 10 )
shader_param/evil = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 24 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[node name="GraphicScene" type="Node2D"]
script = ExtResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource( 4 )
stopped = true

[node name="StarLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 512 )

[node name="Stars" type="Sprite" parent="ParallaxBackground/StarLayer"]
position = Vector2( 1024, -62 )
texture = ExtResource( 5 )

[node name="EvilAuroraLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Aurora" type="Sprite" parent="ParallaxBackground/EvilAuroraLayer"]
material = SubResource( 12 )
position = Vector2( 1024, -24 )
texture = ExtResource( 6 )

[node name="GoodAuroraLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Aurora" type="Sprite" parent="ParallaxBackground/GoodAuroraLayer"]
material = SubResource( 11 )
position = Vector2( 1024, -24 )
texture = ExtResource( 6 )

[node name="MountainLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.03, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Mountains" type="Sprite" parent="ParallaxBackground/MountainLayer"]
position = Vector2( 1024, -48 )
texture = ExtResource( 8 )

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Clouds" type="Sprite" parent="ParallaxBackground/CloudLayer"]
position = Vector2( 1024, -78 )
texture = ExtResource( 7 )

[node name="FarTreeLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="FarTrees" type="Sprite" parent="ParallaxBackground/FarTreeLayer"]
position = Vector2( 1026, -75 )
texture = ExtResource( 2 )

[node name="NearTreeLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_mirroring = Vector2( 2048, 0 )

[node name="NearTrees" type="Sprite" parent="ParallaxBackground/NearTreeLayer"]
position = Vector2( 1024, -63 )
texture = ExtResource( 9 )

[node name="SnowLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Snow" type="Sprite" parent="ParallaxBackground/SnowLayer"]
position = Vector2( 1024, -63 )
texture = ExtResource( 3 )

[node name="Snow2" type="Sprite" parent="ParallaxBackground/SnowLayer"]
position = Vector2( 1000, 64 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 27, 65 )
scale = Vector2( 4, 4 )
frames = SubResource( 9 )
animation = "stopped"
frame = 1
playing = true

[node name="blizzard_particles" type="CPUParticles2D" parent="."]
position = Vector2( -992, -14 )
emitting = false
amount = 1000
lifetime = 3.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
direction = Vector2( 1, 0.1 )
spread = 9.15
gravity = Vector2( 0, 0 )
initial_velocity = 807.24
scale_amount = 6.0
color = Color( 0.854902, 0.94902, 0.913725, 1 )

[node name="hail_particles" type="CPUParticles2D" parent="."]
position = Vector2( -114, -496 )
emitting = false
amount = 200
emission_shape = 2
emission_rect_extents = Vector2( 1000, 1 )
direction = Vector2( 0.2, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
scale_amount = 6.0
color = Color( 0.584314, 0.878431, 0.8, 1 )
